# WebhookPush

./: .env.example  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY_IMPLEMENTATION.md  wrangler.jsonc
.github/workflows/: deploy-backend.yml  deploy-pages.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  push.rs  state.rs
cloudflare/: worker.js  wrangler.toml
frontend/: app.js  index.html  styles.css  sw.js
frontend/static/: app.js  styles.css
scripts/: test_webhook.ps1
src/: config.rs  db.rs  handlers.rs  main.rs  push.rs  queue.rs  state.rs
